fix word wrap & not participant link

--- a/fos-client/src/app/components/summary-dishes-dialog/summary-dishes-diaglog-feedback/summary-dishes-diaglog-feedback.component.less
+++ b/fos-client/src/app/components/summary-dishes-dialog/summary-dishes-diaglog-feedback/summary-dishes-diaglog-feedback.component.less
@@ -160,7 +160,7 @@
 
 .messages {
   width: fit-content;
-  word-break: break-all;
+  word-break: keep-all;
   background: white;
   padding: 10px;
   border-radius: 2px;
